--- a/views/change_info.ejs
+++ b/views/change_info.ejs
@@ -14,7 +14,7 @@
 <main class="change-info-whole-wrapper">
 
   <p class="change-info-username-title">ユーザー名</p>
-  <input type="text" class="change-info-input-username">
+  <input type="text" class="change-info-input-username" value="<%= locals.username %>">
 
   <p class="change-info-profilepic-title">プロフィール画像</p>
   <div class="change-info-profilepic-wrapper">
