--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
 		name="viewport"
 		content="width=device-width,user-scalable=yes,shrink-to-fit=yes"
 	/>
-	<title>ホーム</title>
+	<title>Revima</title>
 </head>
 <body>
 	<%- include("./set/header"); %>
