--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -17,7 +17,7 @@
         <div class="mypage-user-icon">
           <img src="/usericon/usericon1.png">
         </div>
-        <p class="mypage-user-name">トム</p>
+        <p class="mypage-user-name"><%= locals.username %></p>
       </div>
       <div class="mypage-second-container">
         <p>2020/12/15</p>
