--- a/views/set/header.ejs
+++ b/views/set/header.ejs
@@ -7,7 +7,7 @@
     <% if (locals.isLoggedIn === false ) { %>
       <a href="/" class="header-logo-top">Revima</a> 
     <% } else { %>
-      <a href="/home" class="header-logo-top">Revima</a> 
+      <a href="/" class="header-logo-top">Revima</a> 
     <% } %>  
     
     <% if (locals.isLoggedIn === false ) { %>
