--- a/public/css/change_info.css
+++ b/public/css/change_info.css
@@ -12,6 +12,7 @@
   border-radius: 5px;
   height: 40px;
   margin-top: 3px;
+  padding: 0 13px;
   width: 100%;
 }
 .change-info-profilepic-title {
