--- a/public/css/introduce_movie.css
+++ b/public/css/introduce_movie.css
@@ -1,7 +1,7 @@
 @import url("/css/set/var.css");
 
 .introduce-movie-whole-wrapper {
-  padding: 0 20px 30px;
+  padding: 0 20px 55px;
 }
 .introduce-movie-title{
   font-size: 24px;
@@ -20,13 +20,11 @@
   line-height: 30px;
   margin-top: 30px;
 }
-.introduce-movie-vote{
+.introduce-movie-back {
   background-color: var(--base-yellow);
   border-radius: 5px;
-  color: #252525;
-  font-size: 18px;
-  font-weight: 700;
-  height: 64px;
+  color: var(--base-black);
+  height: 40px;
   margin: 40px auto 0;
   text-align: center;
   width: 100%;
