--- a/public/css/vote.css
+++ b/public/css/vote.css
@@ -9,6 +9,9 @@
 .vote-title span {
   color: var(--base-yellow);
 }
+.vote-sup-expra {
+  margin-top: 10px;
+}
 
 .vote-select-movie-wrapper {
   margin-top: 20px;
@@ -35,13 +38,17 @@
   }
 }
 .vote-select-movie-container div img {
+  cursor: pointer;
   display: block;
   height: 150px;
   width: 100px;
 }
+.vote-select-movie-container div img:hover {
+  opacity: 0.7;
+}
 .vote-select-movie-container div input:before {
   border-radius: 50%;
-  border: 2px solid var(--base-gray);
+  border: 2px solid #8B8A8A8A;
   cursor: pointer;
   content: '';
   display: block;
@@ -68,6 +75,7 @@
   background-color: var(--base-yellow);
   border-radius: 5px;
   color: var(--base-black);
+  font-size: 18px;
   font-weight: 700;
   height: 64px;
   margin-top: 35px;
