--- a/views/nologin_home.ejs
+++ b/views/nologin_home.ejs
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>トップ</title>
+  <title>Revima</title>
   <link rel="stylesheet" type="text/css" href="/css/set/destyle.css" />
   <link rel="stylesheet" type="text/css" href="/css/set/default.css" />
-  <link rel="stylesheet" type="text/css" href="/css/top.css" />
+  <link rel="stylesheet" type="text/css" href="/css/nologin_home.css" />
 </head>
 <body>
   <%- include("./set/header"); %>
