予約完了ページ完成

--- a/views/reserve_done.ejs
+++ b/views/reserve_done.ejs
@@ -8,5 +8,15 @@
   <link rel="stylesheet" type="text/css" href="/css/set/default.css" />
   <link rel="stylesheet" type="text/css" href="/css/reserve_done.css" />
 </head>
-<body>
+<body class="reserve-done-wrapper">
+  <h1><a href="/">Revima</a></h1>
+  <p>予約が完了しました ！<br>
+    作品 ターミナル<br>
+    日時 
+  </p>
+  <img src="/images/reserve_done.png">
+  <div class="regist-done-btn-wrapper"> 
+    <a href="/"><button>HOMEに戻る</button></a>
+  </div>
+ 
 </body>
