--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,7 +13,7 @@
 <body>
 	<%- include("./set/header"); %>
 	<main class="home-whole-wrapper">
-		<p class="home-greet">こんにちは、トムさん</p>
+		<p class="home-greet">こんにちは、<%= locals.username %>さん</p>
 		<section class="home-reserve">
 			<ul class="home-reserve-list">
 				<li>
