--- a/views/payment_info.ejs
+++ b/views/payment_info.ejs
@@ -18,7 +18,7 @@
       <p class="payment-info-edit">編集</p>
       <p class="payment-info-delete">削除</p>
     </div>
-    <p class="payment-info-add-creditcard">+ クレジットカードを追加する</p>
+    <a href="payment_info_add"><p class="payment-info-add-creditcard">+ クレジットカードを追加する</p></a>
     <p class="payment-info-goto-mypage">マイページに戻る</p>
   </main>
 </body>
