支払い情報画面追加

--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -26,6 +26,7 @@
       </div>
     </div>
     <div class="mypage-list-wrapper">
+      <p><a href="reserve_list">予約一覧</a></p>
       <p><a href="/change_info">ユーザー情報変更</a></p>
       <p><a href="/payment_info">支払い情報</a></p>
       <p id="list_logout">ログアウト</p>
