--- a/views/payment_info.ejs
+++ b/views/payment_info.ejs
@@ -15,8 +15,8 @@
     <p class="payment-info-title">クレジットカード</p>
     <div class="payment-info-creditcard-wrapper">
       <p class="payment-info-creditcard-number">0000 - 0000 - 0000</p>
-      <p class="payment-info-edit">編集</p>
-      <p class="payment-info-delete">削除</p>
+      <a href="/payment_info_update"><p class="payment-info-edit">編集</p></a>
+      <p class="/payment-info-delete">削除</p>
     </div>
     <a href="payment_info_add"><p class="payment-info-add-creditcard">+ クレジットカードを追加する</p></a>
     <p class="payment-info-goto-mypage">マイページに戻る</p>
