--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,7 +20,7 @@
 
     <div class="login-container">
       <h1 class="login-logo-top"><a href="/">Revima</a></h1>
-      <form action="" method="post">
+      <form action="/login" method="post">
         <input type="text" name="login_username" placeholder="ユーザーネーム" class="login-input-userinfo"></input>
         <input type="password" name="login_password" placeholder="パスワード" class="login-input-password"></input>
         <button type="submit" class="login-btn-login">ログイン</button>
