--- a/views/reserve_one.ejs
+++ b/views/reserve_one.ejs
@@ -7,13 +7,15 @@
   <link rel="stylesheet" type="text/css" href="/css/set/destyle.css" />
   <link rel="stylesheet" type="text/css" href="/css/set/default.css" />
   <link rel="stylesheet" type="text/css" href="/css/reserve_one.css" />
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 <body>
   <%- include("./set/header"); %>
   <main class="reserve-one-whole-wrapper">
 
     <h1 class="reserve-one-title-title">タイトル</h1>
-    <select name="movie_title" class="reserve-one-selected-movie">
+    <select name="movie_title" class="reserve-one-selected-movie" id="select_title">¥
+      <option></option>
       <option value="terminal1">ターミナル1</option>
       <option value="terminal2">ターミナル2</option>
       <option value="terminal4">ターミナル3</option>
@@ -28,5 +30,13 @@
 
     <a href="/reserve_two"><button class="reserve-one-btn-next">座席選択に進む</button></a>
   </main>
+<script>
+  let select_title = document.getElementById('select_title');
+  select_title.addEventListener('change', ()=> {
+    axios.get('https://jsonplaceholder.typicode.com/todos/1')
+  .then(res => console.log(res.data))
+  }
+ 
+</script>
 </body>
 </html>
