--- a/views/reserve_detail.ejs
+++ b/views/reserve_detail.ejs
@@ -10,4 +10,26 @@
 </head>
 <body>
   <%- include("./set/header"); %>
+  <main class="reserve-detail-whole-wrapper">
+    <div class="reserve-detail-first-wrapper">
+      <h1>ターミナル</h1>
+      <div class="reserve-detail-first-container">
+        <p>上映時間</p>
+        <p>2021/2/7 20:24</p>
+      </div>
+    </div>
+
+    <div class="reserve-detail-second-wrapper">
+      <div class="reserve-detail-second-container">
+        <p>大人</p>
+        <p>2枚</p>
+        <p>¥3000</p>
+      </div>
+      <div class="reserve-detail-seat-wrapper">
+        <p>● B-5</p>
+      </div>
+    </div>
+
+    <div class="reserve-detail-third-wrapper"></div>
+  </main>
 </body>
