マイページに戻る　修正

--- a/views/payment_info.ejs
+++ b/views/payment_info.ejs
@@ -25,6 +25,6 @@
     </div>
   
     <a href="payment_info_add"><p class="payment-info-add-creditcard">+ クレジットカードを追加する</p></a>
-    <p class="payment-info-goto-mypage">マイページに戻る</p>
+    <a href="/mypage"><p class="payment-info-goto-mypage">マイページに戻る</p></a>
   </main>
 </body>
