--- a/views/reserve_detail.ejs
+++ b/views/reserve_detail.ejs
@@ -30,6 +30,24 @@
       </div>
     </div>
 
-    <div class="reserve-detail-third-wrapper"></div>
+    <div class="reserve-detail-third-wrapper">
+      <div class="reserve-detail-third-upper-container">
+        <p>小計</p>
+        <p>¥3000</p>
+      </div>
+
+      <div class="reserve-detail-third-container">
+        <div>
+          <p>ご請求金額</p>
+          <p>¥3000</p>
+        </div>
+        <div>
+          <p>お支払い方法</p>
+          <p>クレジットカード</p>
+        </div>
+      </div>
+    </div>
+
+    <a href="reserve_list"><button class="reserve-detail-backbtn">予約一覧に戻る<button></a>
   </main>
 </body>
