--- a/public/css/payment_info.css
+++ b/public/css/payment_info.css
@@ -5,11 +5,13 @@
 }
 .payment-info-title {
   font-weight: 700;
+  margin-bottom: -15px;
 }
 .payment-info-creditcard-wrapper {
   align-items: center;
   display: flex;
   justify-content: space-between;
+  margin-top: 20px;
 }
 .payment-info-creditcard-number {
   align-items: center;
@@ -18,7 +20,6 @@
   display: flex;
   height: 40px;
   justify-content: center;
-  margin-top: 5px;
   padding: 0 10px;
   width: 80%;
 }
