--- a/views/payment_info.ejs
+++ b/views/payment_info.ejs
@@ -13,16 +13,17 @@
   <%- include("./set/header"); %>
   <main class="payment-info-whole-wrapper">
     <p class="payment-info-title">クレジットカード</p>
-    <div class="payment-info-creditcard-wrapper">
-      <% creditcards.forEach((creditcard) => { %>
+    <% creditcards.forEach((creditcard) => { %>
+      <div class="payment-info-creditcard-wrapper">
         <p class="payment-info-creditcard-number">
+          <!-- 番号を4つに分ける -->
           <% let creditnums = creditcard.creditnumber.match(/.{4}/g); %>
           <%= creditnums[0] %> - <%= creditnums[1] %> -  <%= creditnums[2] %> - <%= creditnums[3] %>
         </p>
-        <a href="/payment_info_update"><p class="payment-info-edit">編集</p></a>
-        <a href="/payment_info_delete"><p class="payment-info-delete">削除</p></a>
-      <% }) %>
-    </div>
+        <a href="/payment_info_update/<%= creditcard.paymentid %>"><p class="payment-info-edit">編集</p></a>
+        <a href="/payment_info_delete/<%= creditcard.paymentid %>"><p class="payment-info-delete">削除</p></a>
+      </div>
+    <% }) %>
   
     <a href="payment_info_add"><p class="payment-info-add-creditcard">+ クレジットカードを追加する</p></a>
     <a href="/mypage"><p class="payment-info-goto-mypage">マイページに戻る</p></a>
