--- a/views/reserve_three.ejs
+++ b/views/reserve_three.ejs
@@ -13,6 +13,66 @@
   <%- include("./set/header"); %>
 
   <main class="reserve-three-whole-wrapper">
+    <h1 class="reserve-three-creditcards-title">クレジットカード</h1>
+    <select class="reserve-three-creditcards-list">
+      <% creditcards.forEach((creditcard)=> {%>
+        <!-- 番号を4つに分ける -->
+        <% let creditnums = creditcard.creditnumber.match(/.{4}/g); %>
+        <option>  <%= creditnums[0] %> - <%= creditnums[1] %> -  <%= creditnums[2] %> - <%= creditnums[3] %></option>
+      <% }) %>
+    </select>  
 
+    <p class="reserve-three-nowstep">3/3</p>
+
+    <form method="POST" action="/reserve_three" class="reserve-three-info-box">
+      <div class="reserve-three-movieinfo-wrapper">
+        <div>
+          <p>作品</p>
+          <p><%= reserve_info[0].title %></p>
+        </div>
+        <div>
+          <p>日時</p>
+          <% 
+            let months = {
+              Jan: "1", 
+              Feb: "2", 
+              Mar: "3",
+              Apr: "4", 
+              May: "5", 
+              Jun: "6", 
+              Jul: "7",
+              Aug: "8",
+              Sep: "9",
+              Oct: "10",
+              Nov: "11",
+              Dec: "12"
+            };
+            let weeks = {
+              Mon: "月", 
+              Tue:"火", 
+              Wed: "水",
+              Thu: "木", 
+              Fri: "金", 
+              Sat: "土", 
+              Sun: "日"
+            };
+            let time_box = String(reserve_info[0].start).split(' ');
+          %>
+          <p><%= time_box[3] %>/<%= months[time_box[1]] %>/<%= time_box[2] %>(<%= weeks[time_box[0]] %>)<%= String(time_box[4]).slice(0, -3) %>-</p>
+        </div>
+      </div>
+
+      <div class="reserve-three-fee-info">
+        <p>大人<%= selected_seats.length %>枚</p>
+        <p><%= selected_seats.length * reserve_info[0].charge %>円</p>
+      </div>
+
+      <% selected_seats.forEach((selected_seat)=> { %>
+        <input class="reserve-three-selected-info" value="<%= selected_seat.split(',')[0] %>" name="seat">
+      <% }) %>
+      
+      <button type="submit">購入する</button>
+    </form>
+    <a href="/reserve_two"><p class="reserve-three-backpage">座席選択に戻る</p></a>
   </main>
 </body>
